# Theta-Take-Home-Challenge

./: .gitignore  CLAUDE.md  DESIGN_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bundles/instance_ansible__ansible-cb94c0cc550df9e98f1247bc71d8c2b861c75049-v1055803c3a812189a1133297f7f5468579283f86/: description.md  task.json
bundles/instance_ansible__ansible-cb94c0cc550df9e98f1247bc71d8c2b861c75049-v1055803c3a812189a1133297f7f5468579283f86/tests/: fail_to_pass.json  pass_to_pass.json
bundles/instance_flipt-io__flipt-518ec324b66a07fdd95464a5e9ca5fe7681ad8f9/: description.md  task.json
bundles/instance_flipt-io__flipt-518ec324b66a07fdd95464a5e9ca5fe7681ad8f9/tests/: fail_to_pass.json
examples/: README.md  go_validate_report.json  report_agentic.json  report_anthropic_singleshot.json  report_command_isolation.json  report_gold_resolved.json  report_noop_not_resolved.json  solver_patch_agentic.diff  solver_patch_anthropic.diff  solver_patch_command.diff
taskbundle/: __init__.py  __main__.py  bundle.py  cli.py  container.py  dataset.py  db.py  masker.py  runner.py  solver.py
tests/: test_flatten.py  test_instance_commit.py  test_masker.py  test_runner_go.py  test_runner_xml.py  test_solver_parsing.py
